my-apps/home-assistant/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: home-assistant
  namespace: home-assistant
spec:
  parentRefs:
    - name: gateway-internal
      namespace: gateway
      sectionName: https
    - name: gateway-internal
      namespace: gateway
      sectionName: ha-oauth
  hostnames:
    - "homeassistant.lan"
    - "homeassistant.local"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: home-assistant
          port: 80
